<resources>
    <string name="app_name">PME</string>
    <string name="create_personal_account">Create personal account</string>
    <string name="your_name">Your Name</string>
    <string name="pin_code">PIN Code</string>
    <string name="create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pme">PME</string>
    <string name="subTitle">Hi there\nit’s the time to manage your life</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="create_profile">Create Profile</string>
    <string name="warning_write_your_name">Please, Write your name!</string>
    <string name="pin_used_the_app">This PIN used every time you using the app</string>
    <string name="set_pin">Set PIN</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="pin_4_digits">PIN should be 4 numbers</string>
    <string name="add_task">Add Task</string>
    <string name="loading_data">Loading Data…</string>
    <string name="empty_data">Empty Data</string>
    <string name="let_s_create_the_tasks_you_want_to_commit_to">Let\'s create the tasks you want to commit to</string>
    <string name="the_tasks_you_want_to_commit_to">The tasks you want to commit to</string>
    <string name="create_new_task">Create new task</string>
    <string name="task_name">Task Name</string>
    <string name="task_period">Task Period</string>
    <string name="task_count">Task Count</string>
    <string name="task_duration_min">Task Duration (min)</string>
    <string name="task_points">Task Points</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="required_field">Required Field</string>
    <string name="create_task_success">Create task successfully</string>
    <string name="dash">-</string>
    <string name="times">times</string>
    <string name="min">min</string>
    <string name="pt">pt</string>
    <string name="next">next</string>
    <string name="the_tasks_you_want_to_avoid">The tasks you want to avoid</string>
    <string name="let_s_create_the_tasks_you_want_to_avoid">Let\'s create the tasks you want to avoid</string>
    <string name="once">once</string>
    <string name="rewards_list">Rewards List</string>
    <string name="now_let_s_specify_the_rewards_for_you">Now let’s specify the rewards for you</string>
    <string name="create_new_reward">Create new reward</string>
    <string name="reward_name">Reward Name</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_rewards">Rewards</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_members">Members</string>
    <string name="menu_pin">PIN Code</string>
    <string name="current_points">Current Points:</string>
    <string name="forgot_pin_code">Forgot PIN Code?</string>
    <string name="good_tasks">Good Tasks</string>
    <string name="bad_tasks">Bad Tasks</string>
    <string name="let_s_convert_them_to_blue">let’s convert them to blue 💪</string>
    <string name="keep_yourself_away_from_these_keep_it_white">Keep yourself away from these, keep it white 💪</string>
    <string name="slash">/</string>
    <string name="todo">todo</string>
    <string name="in_progress">in-progress</string>
    <string name="done">done</string>
    <string name="free">free</string>
    <string name="down">down</string>
    <string name="current_progress">Current Progress</string>
    <string name="add_new_progress">Add New Progress</string>
    <string name="today_progress">Today Progress</string>
    <string name="buy_a_reward_using_your_points">Buy a reward using your points</string>
    <string name="last_reward_history">Last Reward History</string>
    <string name="buy">Buy</string>
    <string name="not_enough_points">There is no enough points</string>
    <string name="change_name">Change Name</string>
    <string name="total_points">Total Points:</string>
    <string name="used_points">Used Points:</string>
    <string name="name_chnaged_success">Name changes successfully</string>
    <string name="enter_current_pin">Enter Current PIN</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="wrong_pin">Wrong PIN !</string>
    <string name="wrong_current_pin">Wrong Current PIN!</string>
    <string name="pin_changed_success">PIN changed successfully</string>
    <string name="change_pin">Change PIN</string>
    <string name="create_member_profile">Create Member Profile</string>
    <string name="enter_member_name">Enter Member Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="make_default">Make Default</string>
    <string name="warning_write_member_name">Enter member name, please!</string>
    <string name="default_user_chnaged">Default User has been changed</string>
    <string name="today_at">Today at</string>
    <string name="yesterday_at">Yesterday at</string>
    <string name="at">at</string>
    <string name="delete">Delete</string>
    <string name="default_user">Default</string>
    <string name="Mine">Mine</string>
</resources>