<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/rewardFragment"
            android:icon="@drawable/ic_baseline_card_giftcard"
            android:title="@string/menu_rewards" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_baseline_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/childrenFragment"
            android:icon="@drawable/ic_baseline_people"
            android:title="@string/menu_children" />
        <item
            android:id="@+id/pinFragment"
            android:icon="@drawable/ic_baseline_lock"
            android:title="@string/menu_pin" />
    </group>

</menu>